--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ h2{
     font-weight: 700;
     line-height: 54px;
 }
+h3{
+    font-size: 28px;
+    color: #18191F;
+    line-height: 54px;
+}
 
 a{
     text-decoration: none;
@@ -101,6 +106,53 @@ p{
 .about-items p{
     margin-bottom: 100px;
 }
+
+/* blog style starts here */
+
+.blog-title{
+    font-size: 36px;
+    font-weight: 700;
+    color: #676767;
+    text-align: center;
+
+}
+
+.blog p{
+    text-align: center;
+    width: 600px;
+    margin: 0 auto;
+    padding-top: 30px;
+    
+}
+
+.card{
+    width: 80%;
+    margin-top: 30px;
+    padding: 10px;
+    padding-bottom: 50px;
+    border-radius: 5px;
+    box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.15);
+    
+}
+
+.card img{
+    width: 100%;
+}
+
+.card p{
+    width: 100%;
+    text-align: justify;
+}
+
+.left-card{
+    margin-left: 150px;
+}
+.right-card{
+    margin-left: 50px;
+}
+
+
+
 
 
 
